--- a/mathanth.tex
+++ b/mathanth.tex
@@ -77,6 +77,24 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 идея: \\
 Теорема 2. А -- компакт в метрическом пространстве Х $\Rightarrow$ A ограничено и замкнуто на Х. Обратное неверно.
 
+\section{Непрерывность}
+\subsection{Предел числовой функции нескольких переменных}
+\subsection{Предел функции по множеству}
+\subsection{Непрерывность функции нескольких переменных в точке и по множеству}
+\subsection{Свойства функций, непрерывных на компакте — ограниченность, достижение точных нижней и верхней граней, равномерная непрерывность (теорема Кантора)}
+\subsection{Теорема о промежуточных значениях функции, непрерывной в области}
+\subsection{Связные множества}
+
+
+\section{Дифференцируемость}
+\subsection{Частные производные функции нескольких переменных}
+\subsection{Дифференцируемость функции в точке, дифференциал}
+\subsection{Необходимые условия дифференцируемости, достаточные условия дифференцируемости функции нескольких переменных}
+\subsection{Дифференцируемость сложной функции}
+\subsection{Инвариантность формы дифференциала относительно замены переменных}
+\subsection{Производная по направлению и градиент, их связь и геометрический смысл}
+
+
 
 \section{Формула Тейлора}
 \subsection{Частные производные высших порядков}
@@ -413,6 +431,66 @@ $\overset{\infty}{\sum} a_k$ наз. усл. сх., если $\overset{\infty}{\
 идея: когда б., добирать отр., когда м., добирать пол. (разд. ряд на пол. и отр.) \\
 Теорема 2. $\overset{\infty}{\sum} a_k$ сх. усл., то $\forall x \in \mathbb R$ можно пер. чл. $\overset{\infty}{\sum} a_k$ так: $\overset{\infty}{\sum} a_{kj} = x$
 \subsection{Произведение абсолютно сходящихся рядов}
+
+
+\section{Функциональные последовательности и ряды}
+\subsection{Равномерная сходимость функциональных последовательностей и рядов}
+\subsection{Критерий Коши равномерной сходимости}
+\subsection{Непрерывность суммы равномерно сходящегося ряда из непрерывных функций}
+\subsection{Почленное интегрирование и дифференцирование функциональных последовательностей и рядов}
+\subsection{Признаки Вейерштрасса, Дирихле и Абеля равномерной сходимости функциональных рядов}
+
+
+\section{Степенные ряды}
+\subsection{Степенные ряды с комплексными членами}
+\subsection{Первая теорема Абеля}
+\subsection{Круг и радиус сходимости}
+\subsection{Характер сходимости степенного ряда в круге сходимости}
+\subsection{Непрерывность суммы степенного ряда в круге сходимости}
+\subsection{Формула Коши–Адамара}
+\subsection{Сохранение радиуса сходимости степенного ряда при формальном дифференцировании и интегрировании ряда}
+\subsection{Вторая теорема Абеля}
+
+
+\section{Ряд Тейлора}
+\subsection{Степенные ряды с действительными членами}
+\subsection{Бесконечная дифференцируемость суммы степенного ряда на интервале сходимости}
+\subsection{Единственность представления функции степенным рядом}
+\subsection{Достаточные условия разложимости бесконечно дифференцируемой функции в степенной ряд}
+идея: ф.Т. по Л., $M \frac{\delta^{n+1}}{(n+1)!} \rightarrow 0 \; as \; n \rightarrow \infty$ \\
+Теорема 1. $\exists \delta > 0: \; f$ беск. дифф. в $U_\delta (x_0)$ и 
+\begin{equation*}
+    \exists M > 0: \; \forall n \in \mathbb N \; \forall x \in U_\delta (x_0) \hookrightarrow |f^{(n)}(x)| \leq M \; \Rightarrow
+\end{equation*}
+$f$ рег. в т.$x_0$ и
+\begin{equation*}
+    \forall x \in U_\delta (x_0) \hookrightarrow f(x) = \sum_{k=0}^\infty \frac{f^{(k)} (x_0)}{k!} (x-x_0)^k
+\end{equation*}
+\subsection{Ряд Тейлора}
+Опр. $f(x)$ -- беск. дифф. в т.$x_0$ \\
+Тогда
+\begin{equation*}
+    \sum_{k=0}^\infty \frac{f^{(k)} (x_0)}{k!} (x-x_0)^k
+\end{equation*}
+наз. р.Т. ф-ии $f(x)$ в т.$x_0$
+\subsection{Формула Тейлора с остаточным членом в интегральной форме}
+\subsection{Пример бесконечно дифференцируемой функции, не разлагающейся в степенной ряд}
+идея: все пр. в нуле равны нулю \\
+Бесконечно дифференцируемая функция, не разлагающаяся в степенной ряд
+\begin{equation*}
+    f(x) = 
+    \begin{cases}
+    \exp (-1/x^2) & x \neq 0 \\
+    0 & x=0
+    \end{cases}
+\end{equation*}
+
+\subsection{Разложение в ряд Тейлора основных элементарных функций}
+1. $e^x$ беск. дифф., $|(e^x)^{(n)}| \leq e^\delta \; \forall x \in U_\delta (0) \; \forall n \in \mathbb N \Rightarrow$
+\begin{equation*}
+    e^x = \sum_{k=0}^\infty \frac{x^k}{k!}
+\end{equation*}
+\subsection{Разложение в степенной ряд комплекснозначной экспоненты}
 
 
 \end{document}
