--- a/mathanth.tex
+++ b/mathanth.tex
@@ -77,6 +77,8 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 идея: \\
 Теорема 2. А -- компакт в метрическом пространстве Х $\Rightarrow$ A ограничено и замкнуто на Х. Обратное неверно.
 
+
+\newpage
 \section{Непрерывность}
 \subsection{Предел числовой функции нескольких переменных}
 \subsection{Предел функции по множеству}
@@ -86,6 +88,7 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 \subsection{Связные множества}
 
 
+\newpage
 \section{Дифференцируемость}
 \subsection{Частные производные функции нескольких переменных}
 \subsection{Дифференцируемость функции в точке, дифференциал}
@@ -95,7 +98,7 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 \subsection{Производная по направлению и градиент, их связь и геометрический смысл}
 
 
-
+\newpage
 \section{Формула Тейлора}
 \subsection{Частные производные высших порядков}
 \begin{equation*}
@@ -155,8 +158,8 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 \end{equation*}
 
 
+\newpage
 \section{Теория меры}
-
 \subsection{Определение измеримости по Лебегу множества в n–мерном евклидовом пространстве}
 Мн-во $X \subset \mathbb R^n$ изм. по Лебегу $\Leftrightarrow$ явл. объед. сч.числа кон.изм.мн-в \\
 Мн-во $X \subset \mathbb R^n$ кон.изм. $\Leftrightarrow$
@@ -188,6 +191,7 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 \subsection{Измеримость и мера цилиндра в (n+1) – мерном пространстве}
 
 
+\newpage
 \section{Интеграл}
 \subsection{Определенный интеграл Римана}
 Опр.
@@ -265,6 +269,7 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 \subsection{Замена переменной и интегрирование по частям в определенном интеграле}
 
 
+\newpage
 \section{Геометрические приложения интеграла}
 \subsection{Геометрические приложения определенного интеграла — площадь криволинейной трапеции, объем тела вращения, длина кривой}
 идея: разбить на супремум и инфимум прямоугольники, их суммы равны в.сумме Д. и н.сумме Д. \\
@@ -301,6 +306,7 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 \end{equation*}
 
 
+\newpage
 \section{Криволинейный интеграл I и II рода}
 \subsection{Криволинейный интеграл первого рода}
 Определение. Пусть кр. $L = \{ \overline{r}, \; t \in [a,b] \} \subset \mathbb R^n$ зад. непр.в-р-ф-ей $\overline{r}$, пр. кот. кус.непр. на отр. $[a,b]$. Пусть на мн-ве $L$ зад. непр.скал.ф-я $f(\overline{r}(t))$ \\
@@ -324,6 +330,7 @@ b. $A_i$ -- открыто $\forall i \in \mathbb N $ $\Rightarrow$
 Лемма 2. При изм. ор. кр. крив. инт. 2 рода меняет знак.
 
 
+\newpage
 \section{Несобственный интеграл}
 \subsection{Несобственный интеграл}
 Определение. Пусть $f:[a,\infty) \rightarrow \mathbb R \; and \; \forall b>a$ $f$ инт-ма на $[a,b]$ \\
@@ -363,6 +370,8 @@ $\int_a^b f(x) dx$ сх.абс. $\Rightarrow$ $\int_a^b f(x) dx$ сх.
 \end{equation*}
 сх. \\
 
+
+\newpage
 \section{Числовые ряды}
 \subsection{Числовые ряды}
 Определение. Пусть $\{ a_k \}_{k=1}^{\infty}$ -- числ. посл. \\
@@ -433,6 +442,7 @@ $\overset{\infty}{\sum} a_k$ наз. усл. сх., если $\overset{\infty}{\
 \subsection{Произведение абсолютно сходящихся рядов}
 
 
+\newpage
 \section{Функциональные последовательности и ряды}
 \subsection{Равномерная сходимость функциональных последовательностей и рядов}
 Опр. $\{ f_n (x) \}$ сх. к $f(x)$ на мн.$X$ $\Leftrightarrow$
@@ -461,9 +471,28 @@ $\overset{\infty}{\sum} a_k$ наз. усл. сх., если $\overset{\infty}{\
 \end{equation*}
 То $f(x)$ непр. на $X$
 \subsection{Почленное интегрирование и дифференцирование функциональных последовательностей и рядов}
+идея: $|\int_a^b f_n(x) dx - \int_a^b f(x) dx| \leq (b-a) \sup (f_n(x)-f(x)) \rightarrow 0$ \\
+Теорема 3. $f_n(x)$ непр. на $[a,b]$ и $f_n (x) \underset{X}{\rightrightarrows} f(x)$ $\Rightarrow$
+\begin{equation*}
+    \underset{n \rightarrow \infty}{lim} (\int_a^b f_n(x) dx) = \int_a^b (\underset{n \rightarrow \infty}{lim} f_n (x)) dx
+\end{equation*}
 \subsection{Признаки Вейерштрасса, Дирихле и Абеля равномерной сходимости функциональных рядов}
+Теорема 5.
+\begin{equation*}
+    1. \; \forall n \in \mathbb N \; \forall x \in X \hookrightarrow |A_n(x)| \leq C
+\end{equation*}
+\begin{equation*}
+    2. \; b_k (x) \underset{X}{\rightrightarrows} 0 \; as\; k \rightarrow \infty
+\end{equation*}
+\begin{equation*}
+    3. \; \forall x \in X \; \forall k \in \mathbb N \hookrightarrow b_{k+1}(x) \leq b_k(x) \; \Rightarrow
+\end{equation*}
+\begin{equation*}
+    \sum_{k=0}^\infty a_k(x)b_k(x) \; uniform \; converges \; on \; X
+\end{equation*}
 
 
+\newpage
 \section{Степенные ряды}
 \subsection{Степенные ряды с комплексными членами}
 Опр. $\{ c_k \}$, $c_k, w_0 \in \mathbb C$
@@ -503,6 +532,9 @@ $\overset{\infty}{\sum} a_k$ наз. усл. сх., если $\overset{\infty}{\
 идея: пр.А. \\
 Теорема 4. Пусть $\sum_{k=0}^\infty c_k z^k$ сх. в $z_1 \in \mathbb C$ \\
 Тогда $\sum_{k=0}^\infty c_k z^k$ сх. равн. на $[0, z_1] = \{ tz_1: t \in [0,1] \}$
+
+
+\newpage
 \section{Ряд Тейлора}
 \subsection{Степенные ряды с действительными членами}
 \subsection{Бесконечная дифференцируемость суммы степенного ряда на интервале сходимости}
